[gd_scene load_steps=14 format=2]

[ext_resource path="res://levels/Level0.gd" type="Script" id=1]
[ext_resource path="res://assets/art/space2.png" type="Texture" id=2]
[ext_resource path="res://assets/art/space1.png" type="Texture" id=3]
[ext_resource path="res://assets/art/mars.png" type="Texture" id=4]
[ext_resource path="res://assets/art/WallTileAtlas.tres" type="TileSet" id=5]
[ext_resource path="res://scenes/Light.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Ladder.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/fonts/Link.tres" type="DynamicFont" id=8]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/MetalDoorScene.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/LaserReceiver.tscn" type="PackedScene" id=11]

[sub_resource type="TileSet" id=1]
0/name = "space2.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "space1.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 60, 27.4792 )

[node name="Level" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="TileMap" parent="Background"]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( -65538, 1, 0, -65537, 1, 0, -131072, 1, 0, -131071, 1, 0, -131070, 1, 0, -131069, 1, 0, -131068, 1, 0, -131067, 1, 0, -131066, 1, 0, -131065, 1, 0, -131064, 1, 0, -131063, 1, 0, -131062, 1, 0, -131061, 1, 0, -131060, 1, 0, -131059, 1, 0, -131058, 1, 0, -131057, 1, 0, -131056, 1, 0, -131055, 1, 0, -2, 1, 0, -1, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 1, 0, -65521, 1, 0, -65520, 1, 0, -65519, 1, 0, 65534, 1, 0, 65535, 1, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 131070, 1, 0, 131071, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 0, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 0, 0, 65547, 0, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 196606, 1, 0, 196607, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 1, 0, 131082, 0, 0, 131083, 0, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 262142, 1, 0, 262143, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 327678, 1, 0, 327679, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 0, 0, 262147, 1, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 1, 0, 262153, 0, 0, 262154, 0, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 393214, 1, 0, 393215, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 0, 0, 327683, 1, 0, 327684, 1, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 0, 0, 327693, 0, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 458750, 1, 0, 458751, 1, 0, 393216, -1610612735, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 524286, 1, 0, 524287, 1, 0, 458752, -1610612735, 0, 458753, -1610612735, 0, 458754, -1610612735, 0, 458755, 1, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 1, 0, 458761, 0, 0, 458762, 1, 0, 458763, 1, 0, 458764, 0, 0, 458765, 0, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 589822, 1, 0, 589823, 1, 0, 524288, -1610612735, 0, 524289, -1610612735, 0, 524290, 1, 0, 524291, 1, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 1, 0, 524298, 0, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1610612737, 0, 524302, 1610612737, 0, 524303, 1610612737, 0, 524304, 1, 0, 524305, 1, 0, 655358, 1, 0, 655359, 1, 0, 589824, -1610612735, 0, 589825, -1610612735, 0, 589826, -1610612735, 0, 589827, 1, 0, 589828, 0, 0, 589829, 0, 0, 589830, 1, 0, 589831, 1, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 720894, 1, 0, 720895, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 786430, 1, 0, 786431, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0 )

[node name="mars" type="Sprite" parent="Background"]
position = Vector2( 783.271, 320 )
texture = ExtResource( 4 )

[node name="Environment" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 5 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 1610612740, 0, 1, 1610612740, 0, 2, 1610612740, 0, 3, -1610612736, 0, 13, -1073741824, 0, 14, 1610612740, 0, 15, 1610612740, 0, 16, 1610612740, 0, 17, 1610612740, 0, 18, 1610612740, 0, 19, 1610612740, 0, 20, -1610612736, 0, 21, 1610612745, 0, 22, 1610612745, 0, 23, -1073741824, 0, 24, -1610612732, 0, 25, -1610612732, 0, 26, -1610612732, 0, 27, -1610612732, 0, 28, -1610612732, 0, 29, -1610612736, 0, 65536, 1610612740, 0, 65537, 1610612740, 0, 65538, 1610612740, 0, 65539, -1610612733, 0, 65549, -1073741821, 0, 65550, 1610612740, 0, 65551, 1610612740, 0, 65552, 1610612740, 0, 65553, 1610612740, 0, 65554, 1610612740, 0, 65555, 1610612740, 0, 65556, -1610612736, 0, 65557, -1610612728, 0, 65558, -1610612728, 0, 65559, -1073741824, 0, 65560, -1610612732, 0, 65561, -1610612732, 0, 65562, -1610612732, 0, 65563, -1610612732, 0, 65564, -1610612732, 0, 65565, -1610612736, 0, 131072, 1610612740, 0, 131073, 1610612743, 0, 131074, 1610612740, 0, 131075, -1610612733, 0, 131085, -1073741821, 0, 131086, 1610612740, 0, 131087, 1610612740, 0, 131088, 1610612740, 0, 131089, 1610612740, 0, 131090, 1610612740, 0, 131091, 1610612740, 0, 131092, -1610612736, 0, 131095, 1610612738, 0, 131096, 1610612736, 0, 131097, 1610612739, 0, 131098, 1610612736, 0, 131099, 1610612739, 0, 131100, 1610612736, 0, 131101, -1610612734, 0, 196608, 1610612740, 0, 196609, 1610612740, 0, 196610, 1610612740, 0, 196611, -1610612736, 0, 196621, -1073741824, 0, 196622, 1610612743, 0, 196623, 1610612740, 0, 196624, 1610612740, 0, 196625, 1610612740, 0, 196626, 1610612740, 0, 196627, 1610612740, 0, 196628, -1610612736, 0, 262144, -1610612732, 0, 262145, 1610612736, 0, 262146, 1610612739, 0, 262147, -1610612734, 0, 262157, -1073741824, 0, 262158, 1610612740, 0, 262159, 1610612740, 0, 262160, 1610612740, 0, 262161, 1610612740, 0, 262162, 1610612740, 0, 262163, 1610612740, 0, 262164, -1610612734, 0, 327680, -1610612736, 0, 327681, 1610612745, 0, 327682, 8, 0, 327693, 1610612738, 0, 327694, 1610612739, 0, 327695, 1610612736, 0, 327696, 1610612739, 0, 327697, 1610612736, 0, 327698, 1610612739, 0, 327699, -1610612726, 0, 327700, 8, 0, 327703, -1073741822, 0, 327704, 0, 0, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0, 327709, 2, 0, 393216, -1610612736, 0, 393217, 1610612745, 0, 393218, 8, 0, 393230, 1610612744, 0, 393231, 1610612745, 0, 393232, 9, 0, 393233, 9, 0, 393234, 9, 0, 393235, 9, 0, 393236, 8, 0, 393239, -1073741824, 0, 393240, 1610612740, 0, 393241, 1610612740, 0, 393242, 1610612740, 0, 393243, 1610612740, 0, 393244, 1610612740, 0, 393245, -1610612736, 0, 458752, -1610612732, 0, 458753, 0, 0, 458754, 0, 0, 458755, 2, 0, 458766, 1610612744, 0, 458767, 1610612745, 0, 458768, 9, 0, 458769, 9, 0, 458770, 9, 0, 458771, 9, 0, 458772, 8, 0, 458775, -1073741824, 0, 458776, 1610612740, 0, 458777, 1610612740, 0, 458778, 1610612740, 0, 458779, 1610612740, 0, 458780, 1610612740, 0, 458781, -1610612736, 0, 524288, 1610612740, 0, 524289, 1610612740, 0, 524290, 1610612740, 0, 524291, -1610612736, 0, 524301, -1073741822, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 10, 0, 524308, 8, 0, 524311, -1073741824, 0, 524312, 1610612740, 0, 524313, 1610612740, 0, 524314, 1610612740, 0, 524315, 1610612740, 0, 524316, 1610612740, 0, 524317, -1610612736, 0, 589824, 1610612740, 0, 589825, 1610612740, 0, 589826, 1610612740, 0, 589827, -1610612736, 0, 589837, -1073741824, 0, 589838, 1610612740, 0, 589839, 1610612740, 0, 589840, -1610612732, 0, 589841, -1610612732, 0, 589842, -1610612732, 0, 589843, -1610612732, 0, 589844, 2, 0, 589847, 1610612738, 0, 589848, 1610612736, 0, 589849, 1610612736, 0, 589850, 1610612736, 0, 589851, 1610612736, 0, 589852, 1610612736, 0, 589853, -1610612734, 0, 655360, 1610612740, 0, 655361, 1610612740, 0, 655362, 1610612740, 0, 655363, -1610612736, 0, 655373, -1073741824, 0, 655374, -1610612732, 0, 655375, -1610612732, 0, 655376, -1610612732, 0, 655377, -1610612732, 0, 655378, -1610612732, 0, 655379, -1610612732, 0, 655380, -1610612732, 0, 655381, 2, 0, 720896, 1610612740, 0, 720897, 1610612740, 0, 720898, 1610612740, 0, 720899, -1610612736, 0, 720909, -1073741824, 0, 720910, -1610612732, 0, 720911, -1610612732, 0, 720912, -1610612732, 0, 720913, -1610612732, 0, 720914, -1610612732, 0, 720915, -1610612732, 0, 720916, -1610612732, 0, 720917, 4, 0, 720918, 2, 0, 786432, 1610612740, 0, 786433, 1610612740, 0, 786434, 1610612740, 0, 786435, -1610612736, 0, 786445, -1073741824, 0, 786446, -1610612732, 0, 786447, -1610612732, 0, 786448, -1610612732, 0, 786449, -1610612732, 0, 786450, -1610612732, 0, 786451, -1610612732, 0, 786452, -1610612732, 0, 786453, 4, 0, 786454, 4, 0, 786455, 2, 0, 851968, 1610612740, 0, 851969, 1610612740, 0, 851970, 1610612740, 0, 851971, -1610612736, 0, 851981, -1073741824, 0, 851982, -1610612732, 0, 851983, 4, 0, 851984, 4, 0, 851985, 4, 0, 851986, 4, 0, 851987, 4, 0, 851988, 4, 0, 851989, 4, 0, 851990, 4, 0, 851991, 4, 0, 851992, 2, 0, 917504, 1610612740, 0, 917505, 1610612740, 0, 917506, 1610612740, 0, 917507, -1610612736, 0, 917517, 1610612738, 0, 917518, -1610612732, 0, 917519, -1610612732, 0, 917520, -1610612732, 0, 917521, -1610612732, 0, 917522, -1610612732, 0, 917523, 4, 0, 917524, 4, 0, 917525, 4, 0, 917526, 4, 0, 917527, 4, 0, 917528, -1610612736, 0, 983040, 1610612740, 0, 983041, 1610612740, 0, 983042, 1610612740, 0, 983043, -1610612736, 0, 983054, 1610612738, 0, 983055, -1610612732, 0, 983056, -1610612732, 0, 983057, -1610612732, 0, 983058, -1610612732, 0, 983059, -1610612732, 0, 983060, 4, 0, 983061, 4, 0, 983062, 4, 0, 983063, 4, 0, 983064, -1610612736, 0, 1048576, 1610612740, 0, 1048577, 1610612740, 0, 1048578, 1610612740, 0, 1048579, -1610612736, 0, 1048591, 1610612738, 0, 1048592, -1610612732, 0, 1048593, -1610612732, 0, 1048594, -1610612732, 0, 1048595, -1610612732, 0, 1048596, 4, 0, 1048597, 4, 0, 1048598, 4, 0, 1048599, 4, 0, 1048600, -1610612736, 0, 1114112, 1610612740, 0, 1114113, 1610612740, 0, 1114114, 1610612740, 0, 1114115, -1610612736, 0 )

[node name="Lights" type="Node" parent="."]
editor/display_folded = true

[node name="Light2D15" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 1633.57, 189.129 )

[node name="Light2D16" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 1755.56, 190.209 )

[node name="Light2D8" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 1056.04, 381.281 )

[node name="Light2D9" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 1183.42, 379.122 )

[node name="Light2D2" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 158.242, 324.577 )

[node name="Light2D4" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 834.471, 97.2714 )

[node name="Light2D5" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 835.409, 161.09 )

[node name="Light2D6" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 256.822, 98.6792 )

[node name="Light2D7" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 256.902, 160 )

[node name="Light2D17" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 926.914, 383.515 )

[node name="Ladders" type="Node2D" parent="."]

[node name="Ladder13" parent="Ladders" instance=ExtResource( 7 )]
position = Vector2( 63.5866, 359.068 )
scale = Vector2( 2, 2 )

[node name="Ladder4" parent="Ladders" instance=ExtResource( 7 )]
position = Vector2( 1470, 570 )
rotation = -3.14159
scale = Vector2( 2, 2 )

[node name="Ladder5" parent="Ladders" instance=ExtResource( 7 )]
position = Vector2( 1470, 460 )
rotation = -3.14159
scale = Vector2( 2, 2 )

[node name="Label2" type="Label" parent="."]
margin_left = 260.0
margin_top = 380.901
margin_right = 502.0
margin_bottom = 406.901
custom_fonts/font = ExtResource( 8 )
text = "Left click here ->"

[node name="Label" type="Label" parent="."]
margin_left = 1000.0
margin_top = 300.0
margin_right = 1247.0
margin_bottom = 326.0
custom_fonts/font = ExtResource( 8 )
text = "Right click here ->"

[node name="Player" parent="." instance=ExtResource( 9 )]
position = Vector2( 82.0602, 386.637 )
linear_velocity = Vector2( 0, -10 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.746094, 0.746094, 0.746094, 1 )

[node name="AirlockDoor" parent="." instance=ExtResource( 10 )]
position = Vector2( 1420, 170 )
scale = Vector2( 2, 2 )
open_width = 64

[node name="LaserReceiver" parent="." instance=ExtResource( 11 )]
position = Vector2( 1280, 320 )
rotation = 2.35619
scale = Vector2( 2, 2 )

[node name="next_stage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="next_stage"]
position = Vector2( 1408, 70 )
shape = SubResource( 2 )
[connection signal="laser_detected" from="LaserReceiver" to="." method="_on_LaserReceiver_laser_detected"]
[connection signal="body_entered" from="next_stage" to="." method="_on_next_stage_body_entered"]
